syntax = "proto3";

package auth;

option go_package = "../proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Registration (RegistrationRequest) returns (RegistrationResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string status = 1;   // Статус выполнения, "success" или "error"
  string message = 2;  // Сообщение об ошибке, если статус "error"
  string jwt = 3;      // JWT токен, если статус "success"
}

message RegistrationRequest {
  string username = 1;
  string password = 2;
}

message RegistrationResponse {
  string status = 1;   // Статус выполнения, "success" или "error"
  string message = 2;  // Сообщение об ошибке, если статус "error"
  string jwt = 3;      // JWT токен, если статус "success"
}
